# jarvis-go

./: Cargo.toml  Makefile
.claude/: settings.local.json
crates/jarvis-cli/: Cargo.toml
crates/jarvis-cli/src/: main.rs
crates/jarvis-core/: Cargo.toml
crates/jarvis-core/src/: config.rs  db.rs  history.rs  lib.rs  lib_public.rs  llm.rs
crates/jarvis-core/tests/: history.rs
crates/jarvis-web/: Cargo.toml
crates/jarvis-web/src/: lib.rs
src/agent/: fsm_tests.rs
