[package]
name = "jarvis-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarvis_core"
path = "src/lib_public.rs"


[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
figment = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
libsql = { workspace = true, features = ["core"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
thiserror = "1"
chrono = { workspace = true }
async-trait = "0.1"

