[package]
name = "jarvis-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarvis_core"



[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
figment = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
libsql = { workspace = true, features = ["core"] }
async-openai = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
thiserror = "1"
chrono = { workspace = true }

once_cell = "1"
[dev-dependencies]

tempfile = "3"
async-trait = "0.1"

